styles/gateway_def.css
/* ... */
.connect-dialog {
	background: url("/styles/img/techbg.png") no-repeat scroll right top #C1D6F7 !important;
}
	
.notify-text p.whois, .whois-dialog p.whois {
	display: table;
	width: 100%;
}
	
.notify-text p span.info, .whois-dialog p span.info {
	color: #6D84A0;
	display: block;
	float: left;
	font-weight: bold;
	margin-right: 10px;
	text-align: right;
	width: 7em;
}
	
.notify-text p span.data, .whois-dialog p span.data {
	display: block;
	float: left;
}
	
.kickinput {
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	border: 1px solid #757575;
	font-size: 1.1em;
	height: 20px;
	margin-bottom: 5px;
	margin-top: 5px;
	padding: 2px;
	width: 100%;
}
	
span.notice, span.notice-nick {
	color: #661162;
}
	
#nicklist-hide-button {
	background: url("/styles/img/nicklistbutton.png") no-repeat scroll 0 0 transparent;
	font-size: 50px;
	height: 79px;
	left: 0;
	margin-top: -20px;
	position: absolute;
	top: 50%;
	width: 20px;
}
	
#nicklist-hide-button:hover {
	cursor: pointer;
}
	
#nicklist-closed {
	display: none;
	flex: 1 1 auto;
}

div.close {
	background: url("/styles/img/delete.png") repeat scroll 0 0 transparent;
	background-size: 1.1em 2.2em;
	float: right;
	height: 1.1em;
	margin: 0 0 0 5px;
	padding: 0;
	width: 1.1em;
}
	
div.close:focus, div.close:hover {
	background-position: center bottom;
}
	
input[type="text"], input[type="password"] {
	background: none repeat scroll 0 0 #FFFFFF;
	border: 1px solid #B2B2B2;
	background: #F5F5F5;
	padding: 2px;
	border-radius: 3px;
	color: #666;
}
	
input[type="text"]:hover, input[type="password"]:hover, input[type="text"]:focus, input[type="password"]:focus {
	color: #000;
}

input[type="button"], input[type="submit"] {
	background: url('/styles/img/gg.png') repeat-x;
	background-size: auto 100%;
	border: 1px solid #B2B2B2;
	padding: 5px;
	border-radius: 5px;
}

input[type="button"]:hover, input[type="submit"]:hover {
	cursor: pointer;
}

table.nostyle {
	width: 100%;
}
	
#options-box {
	flex: 0 0 auto;
	align-self: flex-end;
	margin-top: 4px;
	margin-right: 10px;
}

input.symbols {
	font-size: 1em;
	padding-right: 1px !important;
	padding-left: 2px !important;
	padding-top: 3px !important;
	
}

.symbols, .insertColor, .completion, .submit {
	display: block;
	height: 28px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	border: 1px solid #9A9A9A;
	padding: 3px
}

.insertColor, .symbols {
	height: 20px !important;
}

.completion {
	height: 16px !important;
	padding: 4px !important;
}

a.charSelect, #size-dialog a {
	display: block;
	float: left;
	margin: 3px;
	padding: 3px;
	border: 1px solid  #B2B2B2;
	padding: 5px;
	border-radius: 5px;
	width: 1.3em;
	cursor: pointer;
	text-align: center;
	background-color: rgba(245, 245, 245, 0.8);
	font-size: 1.1em;
	height: 1.2em;
}

#symbol-dialog h3, #size-dialog h3 {
	padding-top: 10px;
	clear: left;
}

a.charSelect:hover, #size-dialog a:hover {
	background-color: #d7e4f3;
}

.image_link {
	cursor: pointer;
	display: block;
	padding: 2px;
	margin: 2px;
	padding-left: 30px;
	background-color: #d0d0d0;
}

.image_link:hover {
	background-color: #d7e4f3;
}

#options-box > a {
	width: 1.2em;
	height: 1.2em;
	background-size: 1.2em 2.4em;
	display: block;
	float: left;
}

#button-quit {
	background: url('/styles/img/g_zamknij.png') no-repeat bottom;
}

#button-about {
	background: url('/styles/img/g_about.png') no-repeat bottom;
}

#button-options {
	background: url('/styles/img/g_zebatka.png') no-repeat bottom;
}

#button-tsize {
	background: url('/styles/img/tsize.png') no-repeat bottom;
}

#button-about:hover, #button-about:focus, #button-options:hover, #button-options:focus, #button-quit:hover, #button-quit:focus, #button-tsize:hover, #button-tsize:focus {
	background-position: top;
}

#about-dialog {
	display: none;
	background: url("/styles/img/info.png") no-repeat scroll right top #D7E4F3;
}

#about_div p, #about-dialog p {
	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.2);
	margin-top: 2px;
	padding: 1px;
}
	
#about_div h3, #about-dialog h3 {
	font-size: 1.3em;
	padding-bottom: 10px;
}

.activeWindow {
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	border-radius: 8px;
	background: none repeat scroll 0 0 #515459;
	border: 1px solid #303033;
	color: #fff !important;
	font-weight: bold !important;
	padding: 6px !important;
}

span.uiclick {
	text-decoration: italic;
}

span.uiclick:hover {
	cursor: pointer;
	text-decoration: underline;
}

div.table  {
	display:table;
}

form.tr, div.tr {
	display:table-row;
}

form.trgr {
	display: table-row-group;
}

span.td, span.td_right {
	display:table-cell;
	margin: 4px;
	padding: 0px 4px 0px 4px;
}

span.td_right {
	text-align: right;
}

.chrank, .chavatar {
	width: 1.1em;
	height: 1.1em;
	display: block;
	object-fit: contain;
}

#options-dialog input[type="text"]  {
	width: 3em;
	margin: 0;
	margin-right: -.6em;
	text-align: right;
}

.optionsCheckBox {
	text-align: right;
}
/*
.channelAdmin {
	border: 1px #88a;
	text-align: center;
	font-size: .8em;
	margin-bottom: 3px;
	border: 1px solid #D5D5DC;
	margin-left: 10px;
}*/

.channelAdmin li, #nickOptions li {
	list-style: none outside none;
	margin-top: 3px;
	border: 1px solid #FFFFFF;
	background-color: #E6EFFA;
	margin-left: .4em;
	margin-right: .4em;
	margin-bottom: 4px;
	color: #556A83;
	padding-left: 1em;
    padding-right: 1em;
}

.channelAdminActive {
	background-color: #E6EFFA;
	border-color: #7492B6;
}

ul.channelOperActions, ul.channelOptions, #nickOptions {
    position: absolute;
    z-index: 90;
    right: 1em;
}

.channelAdmin button {
	padding: 2px;
	margin-top: .4em;
}

.beIListContents {
	overflow-y: auto;
	max-height: 30em;
}

.channelOperActionsButton, .channelAdmin li {
	padding-top: 2px;
	padding-bottom: 2px;
}

.channelOperActionsButton:hover, .channelAdmin li:hover, .channelAdminActive ul, #nickOptions li:hover {
	background-color: #e6effa;
	border-color: #7492B6;
}
/* ... */

